pvc/pv-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-pv-dep
  name: my-pv-dep
  namespace: default
spec:
  clusterIP: 10.102.93.215
  clusterIPs:
  - 10.102.93.215
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30931
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-pv-dep
  sessionAffinity: None
  type: NodePort
